unreleased

* Enhancements

  * Stop requiring blockenspiel - just instance_eval is enough