@@ -1,27 +1,20 @@
-require 'rubygems'
+#!/usr/bin/env rake
+require "bundler/gem_tasks"
 
-begin
-  require 'bundler'
-rescue LoadError
-  $stderr.puts "You must install bundler - run `gem install bundler`"
-end
-
-begin
-  Bundler.setup
-rescue Bundler::BundlerError => e
-  $stderr.puts e.message
-  $stderr.puts "Run `bundle install` to install missing gems"
-  exit e.status_code
+require 'rake'
+require 'rake/testtask'
+Rake::TestTask.new(:test) do |test|
+  test.libs << 'test'
+  test.pattern = 'test/**/test_*.rb'
+  test.verbose = true
 end
 
 require 'bueller'
 Bueller::Tasks.new
 
-require 'rake'
-require 'rake/testtask'
-Rake::TestTask.new(:test) do |test|
-  test.libs << 'lib' << 'test'
-  test.pattern = 'test/**/test_*.rb'
-  test.verbose = true
-end
 task :default => :test
+
+require 'yard'
+YARD::Rake::YardocTask.new do |y|
+  y.options << '--no-private'
+end
