@@ -1,11 +1,8 @@
+require 'active_support'
 require 'active_support/version'
-%w{
-  active_support/core_ext/hash/slice
-  active_support/core_ext/array/wrap
-  active_support/core_ext/array/extract_options
-}.each do |active_support_3_requirement|
-  require active_support_3_requirement
-end if ActiveSupport::VERSION::MAJOR == 3
+if ActiveSupport::VERSION::MAJOR >= 3
+  require 'active_support/core_ext'
+end
 
 require 'leap/subject'
 require 'leap/committee'
