@@ -1,166 +1,161 @@
 require 'helper'
 
-class TestLeap < Test::Unit::TestCase
-  context "A generic person" do
-    setup do
+describe Leap do
+  describe "A generic person" do
+    before do
       @person = Person.new
     end
     
-    should 'still have a lucky number' do
-      assert_equal 0, @person.lucky_number
+    it 'still have a lucky number' do
+      @person.lucky_number.must_equal 0
     end
     
-    should 'naturally receive an International Psychics Association-compliant lucky number' do
-      assert_equal [:ipa], @person.deliberations[:lucky_number].compliance
+    it 'naturally receive an International Psychics Association-compliant lucky number' do
+      @person.deliberations[:lucky_number].compliance.must_equal [:ipa]
     end
   end
   
-  context "An aged person" do
-    setup do
+  describe "An aged person" do
+    before do
       @person = Person.new :age => 5
     end
     
-    should 'indeed have a lucky number' do
-      assert_equal 36, @person.lucky_number
+    it 'indeed have a lucky number' do
+      @person.lucky_number.must_equal 36
     end
     
-    should 'nevertheless remember how his lucky number was determined' do
-      assert_equal(@person.deliberations[:lucky_number].characteristics, { :magic_integer => 6, :lucky_number => 36, :age => 5, :litmus => {}})
-      assert_equal 'ninja style', @person.deliberations[:lucky_number].reports.find{ |r| r.committee.name == :magic_integer }.quorum.name
+    it 'nevertheless remember how his lucky number was determined' do
+      @person.deliberations[:lucky_number].characteristics.must_equal(:magic_integer => 6, :lucky_number => 36, :age => 5, :litmus => {})
+      @person.deliberations[:lucky_number].reports.find{ |r| r.committee.name == :magic_integer }.quorum.name.must_equal 'ninja style'
     end
     
-    should 'only give quorums what they ask for' do
-      assert_equal({}, @person.deliberations[:lucky_number].reports.find{ |r| r.committee.name == :litmus }.conclusion)
+    it 'only give quorums what they ask for' do
+      @person.deliberations[:lucky_number].reports.find{ |r| r.committee.name == :litmus }.conclusion.must_equal({})
     end
     
-    should 'not receive an International Psychics Association-compliant lucky number unless he asks for it' do
-      assert_equal [], @person.deliberations[:lucky_number].compliance
+    it 'not receive an International Psychics Association-compliant lucky number unless he asks for it' do
+      @person.deliberations[:lucky_number].compliance.must_equal []
     end
   end
   
-  context "A clever aged person" do
-    setup do
+  describe "A clever aged person" do
+    before do
       @person = Person.new :magic_integer => 42, :age => 5
     end
     
-    should 'be able to use his own magic integer in determining his lucky number' do
-      assert_equal 1764, @person.lucky_number
+    it 'be able to use his own magic integer in determining his lucky number' do
+      @person.lucky_number.must_equal 1764
     end
   end
   
-  context "A named person" do
-    setup do
+  describe "A named person" do
+    before do
       @person = Person.new :name => 'Matz'
     end
     
-    should 'have access to the super magic method' do
-      assert_equal 1, @person.lucky_number
+    it 'have access to the super magic method' do
+      @person.lucky_number.must_equal 1
     end
     
-    should 'be able to stay in compliance with International Psychics Association guidelines' do
-      assert_equal 0, @person.lucky_number(:comply => :ipa)
+    it 'be able to stay in compliance with International Psychics Association guidelines' do
+      @person.lucky_number(:comply => :ipa).must_equal 0
     end
   end
   
-  context "A generic place" do
-    setup do
+  describe "A generic place" do
+    before do
       @place = Place.new
     end
     
-    should 'have decent weather' do
-      assert_equal :decent, @place.weather
+    it 'have decent weather' do
+      @place.weather.must_equal :decent
     end
   end
   
-  context "Vermont" do
-    setup do
+  describe "Vermont" do
+    before do
       @place = Place.new :name => 'Vermont', :seasonality => { :summer => :warm, :winter => :cold }
     end
     
-    should 'be warm in the summer' do
-      assert_equal :warm, @place.weather(:summer)
+    it 'be warm in the summer' do
+      @place.weather(:summer).must_equal :warm
     end
   end
   
-  context "A lazy subject" do
-    setup do
+  describe "A lazy subject" do
+    before do
       @thing = Thing.new
       @thing.anything rescue nil
     end
     
-    should 'have proper implicit characteristics' do
-      assert_equal Hash.new, @thing.deliberations[:anything].characteristics
+    it 'have proper implicit characteristics' do
+      @thing.deliberations[:anything].characteristics.must_equal Hash.new
     end
   end
   
-  context "An impossible decision" do
-    setup do
+  describe "An impossible decision" do
+    before do
       @thing = Thing.new
     end
     
-    should 'be impossible to make' do
-      exception = assert_raise ::Leap::NoSolutionError do
+    it 'be impossible to make' do
+      lambda do
         @thing.anything
-      end
-      
-      assert_match(/No solution was found for "anything"/, exception.message)
+      end.must_raise(::Leap::NoSolutionError, /No solution was found for "anything"/)
     end
   end
   
-  context "A difficult decision" do
-    setup do
+  describe "A difficult decision" do
+    before do
       @person = Person.new :name => 'Bozo'
     end
     
-    should 'provide details about its apparent impossibility' do
-      exception = assert_raise ::Leap::NoSolutionError do
+    it 'provide details about its apparent impossibility' do
+      lambda do
         @person.lucky_number :comply => :zeus
-      end
-      
-      assert_match(/No solution was found for "lucky_number"/, exception.message)
-      assert_match(/magic_float: ancient recipe, name: provided as input/, exception.message)
+      end.must_raise(::Leap::NoSolutionError, /No solution was found for "lucky_number".*magic_float: ancient recipe, name: provided as input/)
     end
   end
 
-  context "Instrumentation" do
-    setup do
+  describe "Instrumentation" do
+    before do
       @old_stdout = $stdout
       $stdout = StringIO.new
       Leap.instrument!
     end
-    should 'not interfere with computation' do
-      @person = Person.new :age => 5
-      assert_equal 36, @person.lucky_number.to_i
-    end
-    teardown do
+    after do
       $stdout = @old_stdout
       Leap.remove_class_variable :@@logger
       Leap.remove_class_variable :@@whip
     end
+    it 'not interfere with computation' do
+      @person = Person.new :age => 5
+      @person.lucky_number.to_i.must_equal 36
+    end
   end
   
-  context 'Seamus deciding about whether he can commit to a date' do
-    setup do
+  describe 'Seamus deciding about whether he can commit to a date' do
+    before do
       @seamus = Seamus.new
     end
     
-    should 'work for most people' do
-      assert_equal :maybe, @seamus.can_i_commit_to_that_date
+    it 'work for most people' do
+      @seamus.can_i_commit_to_that_date.must_equal :maybe
     end
     
-    should 'work for BenT, who is easygoing' do
-      assert_equal :maybe, @seamus.can_i_commit_to_that_date(:comply => :bent)
+    it 'work for BenT, who is easygoing' do
+      @seamus.can_i_commit_to_that_date(:comply => :bent).must_equal :maybe
     end
     
-    should 'never work for andy' do
-      assert_raise ::Leap::NoSolutionError do
+    it 'never work for andy' do
+      lambda do
         @seamus.can_i_commit_to_that_date(:comply => :andy)
-      end
+      end.must_raise(::Leap::NoSolutionError)
     end
   end
   
-  context 'A committee' do
-    setup do
+  describe 'A committee' do
+    before do
       class Owl
         include Leap
         decide :eye_size do
@@ -170,58 +165,56 @@ class TestLeap < Test::Unit::TestCase
       end
     end
     
-    should 'remember options that it was given when it was created' do
-      assert_equal :length, Owl.decisions[:eye_size].committees.first.options[:measures]
+    it 'remember options that it was given when it was created' do
+      Owl.decisions[:eye_size].committees.first.options[:measures].must_equal :length
     end
   end
   
-  context 'A decision without a master committee' do
-    setup do
+  describe 'A decision without a master committee' do
+    before do
       @idea = Idea.new
       @bad_idea = Idea.new(100, 10) # gotchas, caveats
     end
     
-    should 'still compute' do
+    it 'still compute' do
       @idea.value
-      assert_equal({:cost => 0, :benefit => 9, :caveats => 1, :hangups => 0}, @idea.deliberations[:value].characteristics)
+      @idea.deliberations[:value].characteristics.must_equal(:cost => 0, :benefit => 9, :caveats => 1, :hangups => 0)
     end
     
-    should 'provide easy access to committee reports' do
-      assert_equal 0, @idea.value[:cost]
+    it 'provide easy access to committee reports' do
+      @idea.value[:cost].must_equal 0
     end
     
-    should 'provide compliance specific to a certain conclusion' do
+    it 'provide compliance specific to a certain conclusion' do
       # If hangups does not comply with common sense, neither should cost
-      assert_equal [], @idea.deliberations[:value].compliance(:hangups)
-      assert_equal [], @idea.deliberations[:value].compliance(:benefit)
-      assert_equal [], @idea.deliberations[:value].compliance(:cost)
+      @idea.deliberations[:value].compliance(:hangups).must_equal []
+      @idea.deliberations[:value].compliance(:benefit).must_equal []
+      @idea.deliberations[:value].compliance(:cost).must_equal []
       
       # If hangups complies with common sense, cost should also
-      assert_equal [:common_sense], @bad_idea.deliberations[:value].compliance(:hangups)
-      assert_equal [:common_sense], @bad_idea.deliberations[:value].compliance(:cost)
+      @bad_idea.deliberations[:value].compliance(:hangups).must_equal [:common_sense]
+      @bad_idea.deliberations[:value].compliance(:cost).must_equal [:common_sense]
       
       # User input complies with all standards
-      assert_equal [:wisdom], @bad_idea.deliberations[:value].compliance(:benefit)
+      @bad_idea.deliberations[:value].compliance(:benefit).must_equal [:wisdom]
     end
     
-    should 'only return compliant values when compliance is requested and endpoint is unknown' do
+    it 'only return compliant values when compliance is requested and endpoint is unknown' do
       # Nothing complies
-      assert_equal({}, @idea.value(:comply => :common_sense).characteristics)
+      @idea.value(:comply => :common_sense).characteristics.must_equal({})
       
       # Everything but benefit complies
-      assert_equal({:gotchas => 100, :caveats => 10, :hangups => 100, :cost => 100}, @bad_idea.value(:comply => :common_sense).characteristics)
+      @bad_idea.value(:comply => :common_sense).characteristics.must_equal(:gotchas => 100, :caveats => 10, :hangups => 100, :cost => 100)
     end
     
-    should 'return an error message when known endpoint cannot be achieved' do
-      exception = assert_raise ::Leap::NoSolutionError do
+    it 'return an error message when known endpoint cannot be achieved' do
+      lambda do
         @idea.value(:comply => { :common_sense => :benefit })
-      end
-      assert_match(/No solution was found for "benefit"/, exception.message)
+      end.must_raise(::Leap::NoSolutionError, /No solution was found for "benefit"/)
       
-      exception = assert_raise ::Leap::NoSolutionError do
+      lambda do
         @bad_idea.value(:comply => { :common_sense => :benefit })
-      end
-      assert_match(/No solution was found for "benefit"/, exception.message)
+      end.must_raise(::Leap::NoSolutionError, /No solution was found for "benefit"/)
     end
 
     should 'return compliant values when compliance is requested for specific committees' do
